--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "signalk-alarm-silencer",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Plugin to silence SignalK Alarms",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "signalk-node-server-plugin"
   ],
   "author": "scott@scottbender.net",
   "license": "ISC",
